--- a/src/app/shared/components/kpi-model-tickets-priority-per-version/kpi-model-tickets-priority-per-version.component.html
+++ b/src/app/shared/components/kpi-model-tickets-priority-per-version/kpi-model-tickets-priority-per-version.component.html
@@ -23,7 +23,7 @@
         <tr>
             <th> date création</th>
             <th> produit</th>
-            <th> version </th>
+            <th> Nom du ticket </th>
             <th> priorite </th>
         </tr>
     </thead>
