--- a/src/app/shared/components/kpi-model-closed-tickets/kpi-model-closed-tickets.component.html
+++ b/src/app/shared/components/kpi-model-closed-tickets/kpi-model-closed-tickets.component.html
@@ -20,7 +20,9 @@
             <table>
     <thead>
         <tr>
-            <th> nom et prénom</th>
+            <th> collaborateur assigné</th>
+            <th> client issue</th>
+            <th> nom ticket</th>
             <th> date création</th>
             <th> version </th>
         </tr>
@@ -28,6 +30,8 @@
     <tbody>
         <tr *ngFor="let closedTicket of closedTickets|paginate: { itemsPerPage: 5, currentPage: p }| filter:search ">
             <td>{{closedTicket.first_name}}</td>
+            <td>{{closedTicket.nom_client}}</td>
+            <td>{{closedTicket.nom_ticket}}</td>
             <td>{{closedTicket.date_creation}}</td>
             <td>{{closedTicket.nom_version}}</td>
         </tr>
