--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,16 +1,15 @@
 <mat-nav-list>
     <div class="profil-card">
         <div class="header"></div>
-        <h2>MESSADI Khalil</h2>
-        <h4>example@neoxam.com</h4>
+        <h2>Bienvenue ! </h2>
+        <h4>Consulter vos KPI'S ci-dessous</h4>
         <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="MESSADI Khalil">
 
     </div>
 <h2 matSubheader>Rapports</h2>
 
-<a mat-list-item routerLinkActive="List-item-active" routerLink="/">Mon template</a>
-<a mat-list-item routerLinkActive="List-item-active" routerLink="/posts">Mes templates </a>
-<a mat-list-item routerLinkActive="List-item-active" routerLink="/configuration">Creer un template</a>
+<a mat-list-item routerLinkActive="List-item-active" routerLink="/Kpis">Mes templates </a>
+
  
   <mat-divider></mat-divider>
 
