--- a/src/app/shared/components/kpi-model-time-resolution-ticket/kpi-model-time-resolution-ticket.component.html
+++ b/src/app/shared/components/kpi-model-time-resolution-ticket/kpi-model-time-resolution-ticket.component.html
@@ -1,5 +1,5 @@
 <div class="container text-center">
-    <h1> Proportion Tickets Closed VS ticket Returned par la QA</h1>
+    <h1> Temps de résolution des tickets</h1>
 </div>
 <div>
     <div fxFlex="75" fxLayout="column" fxLayoutAlign="start stretch" fxFlex="75" >
