--- a/src/app/shared/components/config-closed-returned-tickets/config-closed-returned-tickets.component.html
+++ b/src/app/shared/components/config-closed-returned-tickets/config-closed-returned-tickets.component.html
@@ -8,8 +8,8 @@
         <form class="example-form" >
           <mat-form-field class="example-full-width">
             <mat-label>Choisir</mat-label>
-            <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <input type="text" [(ngModel)]="nom.nom_collab" matInput [formControl]="myControl" [matAutocomplete]="auto">
+            <mat-autocomplete (optionSelected)="envoyerNom();"  #auto="matAutocomplete" [displayWith]="displayFn">
               <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
                 {{option.name}}
               </mat-option>
@@ -27,12 +27,12 @@
         <mat-form-field class="example-full-width">
           <input type="text"
                  placeholder="Choisir statut"
-                 
+                 [(ngModel)]="epic.nom_epic"
                  matInput
-                 [formControl]="myControlEtatTicket"
+                 [formControl]="myControlEpic"
                  [matAutocomplete]="auto2">
-          <mat-autocomplete #auto2="matAutocomplete">
-            <mat-option *ngFor="let option2 of optionsEtatTicket" [value]="option2">
+          <mat-autocomplete (optionSelected)="envoyerEpic();" #auto2="matAutocomplete">
+            <mat-option *ngFor="let option2 of optionsEpic" [value]="option2">
               {{option2}}
             </mat-option>
           </mat-autocomplete>
@@ -44,12 +44,12 @@
         <mat-form-field class="example-full-width">
           <input type="text"
                  placeholder="Choisir statut"
-                 
+                 [(ngModel)]="sprint.numero_sprint"
                  matInput
-                 [formControl]="myControlEtatTicket"
-                 [matAutocomplete]="auto2">
-          <mat-autocomplete #auto2="matAutocomplete">
-            <mat-option *ngFor="let option2 of optionsEtatTicket" [value]="option2">
+                 [formControl]="myControlSprint"
+                 [matAutocomplete]="auto3">
+          <mat-autocomplete  (optionSelected)="envoyerSprint();" #auto3="matAutocomplete">
+            <mat-option *ngFor="let option2 of optionsSprint" [value]="option2">
               {{option2}}
             </mat-option>
           </mat-autocomplete>
@@ -63,17 +63,29 @@
 
       <div fxLayout="row" fxLayoutAlign="start start" >
         <h3>Du : </h3>
+        
+<form class="Date_form">
       <mat-form-field> 
-        <input matInput [matDatepicker]="myDatePickerDeb">
+        <input 
+        name="something"
+        [(ngModel)]="datedeb.date_deb" (dateChange)=envoyerDateDeb();
+        class="form-control"
+         matInput [matDatepicker]="myDatePickerDeb">
         <mat-datepicker-toggle  matSuffix [for]="myDatePickerDeb"></mat-datepicker-toggle>
-        <mat-datepicker #myDatePickerDeb> </mat-datepicker>
+        <mat-datepicker  #myDatePickerDeb> </mat-datepicker>
       </mat-form-field>
+    </form>
       <h3>Au :  </h3>
+      <form class="Date_form">
       <mat-form-field> 
-        <input matInput [matDatepicker]="myDatePickerFin">
+      
+        <input
+        name="something2"
+         class="Date_form" [(ngModel)]="datefin.date_fin" (dateChange)=envoyerDateFin(); matInput [matDatepicker]="myDatePickerFin">
         <mat-datepicker-toggle  matSuffix [for]="myDatePickerFin"></mat-datepicker-toggle>
-        <mat-datepicker #myDatePickerFin> </mat-datepicker>
+        <mat-datepicker  #myDatePickerFin> </mat-datepicker>
       </mat-form-field>
+    </form>
     </div>
 
     
