--- a/src/app/shared/components/config-tickets-with-priority/config-tickets-with-priority.component.html
+++ b/src/app/shared/components/config-tickets-with-priority/config-tickets-with-priority.component.html
@@ -5,17 +5,20 @@
 <h2 align="center">Configuration du Dashboard</h2>
 <div  fxLayout="row" fxLayoutAlign="start start">
       <h2>nom du collaborateur</h2>&nbsp;&nbsp;&nbsp;
-        <form class="example-form" >
-          <mat-form-field class="example-full-width">
-            <mat-label>Choisir</mat-label>
-            <input type="text" [(ngModel)]="nom.nom_collab" matInput [formControl]="myControl" [matAutocomplete]="auto">
-            <mat-autocomplete (optionSelected)="envoyerNom();"  #auto="matAutocomplete" [displayWith]="displayFn">
-              <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                {{option.name}}
-              </mat-option>
-            </mat-autocomplete>
-          </mat-form-field>
-        </form>
+           
+      <form class="statut_form">
+        <mat-form-field class="example-full-width">
+          <mat-label>collaborateur</mat-label>
+          <input  class="form-control" [(ngModel)]="nom.nom_collab" type="text" matInput [formControl]="myControlNom" [matAutocomplete]="auto">
+          <mat-autocomplete (optionSelected)="envoyerNom();" #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-option *ngFor="let option of optionsNom" [value]="option">
+              {{option}}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </form>
+
+    
 
       <br>
       <br>
