--- a/src/app/shared/components/kpi-model-closed-tickets/kpi-model-closed-tickets.component.html
+++ b/src/app/shared/components/kpi-model-closed-tickets/kpi-model-closed-tickets.component.html
@@ -1,3 +1,8 @@
+
+   <app-config-closed-tickets></app-config-closed-tickets>
+   <mat-divider>
+       
+   </mat-divider>
 <div fxLayout="column" fxLayoutAlign="end start" >
     <div class="container text-center">
         <h1>Tickets closed par collaborateurs</h1>
@@ -55,7 +60,7 @@
         </mat-divider>
 
 
-            <app-config-closed-tickets></app-config-closed-tickets>
+         
 
     
     
