--- a/src/app/shared/components/kpi-model-closed-tickets/kpi-model-closed-tickets.component.html
+++ b/src/app/shared/components/kpi-model-closed-tickets/kpi-model-closed-tickets.component.html
@@ -30,7 +30,8 @@
             <th> statut</th>
             <th> epic</th>
             <th> client issue</th>
-            <th> nom ticket</th>
+            <th> titre</th>
+            <th> référence</th>
             <th> date création</th>
             <th> version </th>
         </tr>
@@ -42,6 +43,7 @@
             <td>{{closedTicket.statut}}</td>
             <td>{{closedTicket.nom_epic}}</td>
             <td>{{closedTicket.nom_client}}</td>
+            <td>{{closedTicket.titre}}</td>
             <td>{{closedTicket.nom_ticket}}</td>
             <td>{{closedTicket.date_creation}}</td>
             <td>{{closedTicket.nom_version}}</td>
