--- a/src/app/shared/components/kpi-model-tickets-priority-per-version/kpi-model-tickets-priority-per-version.component.html
+++ b/src/app/shared/components/kpi-model-tickets-priority-per-version/kpi-model-tickets-priority-per-version.component.html
@@ -29,7 +29,7 @@
         <tr>
             <th> date création</th>
             <th> produit</th>
-            <th> Nom du ticket </th>
+            <th> référence </th>
             <th> Epic </th>
             <th> Version </th>
             <th> n°: sprint</th>
