--- a/src/app/shared/components/kpi-model-time-resolution-ticket/kpi-model-time-resolution-ticket.component.html
+++ b/src/app/shared/components/kpi-model-time-resolution-ticket/kpi-model-time-resolution-ticket.component.html
@@ -30,7 +30,7 @@
             <th> epic</th>
             <th> version</th>
             <th> n°: sprint</th>
-            <th> nom ticket</th>
+            <th> référence</th>
             <th> log</th>
             <th> temps de resolution</th>
             <th> date creation </th>
