--- a/src/app/shared/components/kpi-displayer/kpi-displayer.component.html
+++ b/src/app/shared/components/kpi-displayer/kpi-displayer.component.html
@@ -14,9 +14,7 @@
             <td>{{kpi.name}}</td>
             
             <td>
-              <button  class="btn btn-danger">supprimer</button>
-              <a href="{{kpi.linkConfig}}"><button  class="btn btn-info" style="margin-left: 10px">Configurer</button></a>
-                <a href="{{kpi.linkKpi}}"><button  class="btn btn-info" style="margin-left: 10px">Consulter</button></a>
+                <a href="{{kpi.linkKpi}}"><button  class="btn btn-info" >Consulter</button></a>
             </td>
           </tr>
         </tbody>
