--- a/src/app/shared/components/kpi-model-tickets-priority-per-version/kpi-model-tickets-priority-per-version.component.html
+++ b/src/app/shared/components/kpi-model-tickets-priority-per-version/kpi-model-tickets-priority-per-version.component.html
@@ -7,7 +7,7 @@
     </div>
     
     <div class="container text-center">
-        <h1>priorite des tickets selon leur version</h1>
+        <h1 align="center">rapport sur priotité des tickets</h1>
     </div>
     <div>
     <div fxFlex="75" fxLayout="column" fxLayoutAlign="start stretch" fxFlex="75" >
