--- a/src/app/shared/components/kpi-model-time-resolution-ticket/kpi-model-time-resolution-ticket.component.html
+++ b/src/app/shared/components/kpi-model-time-resolution-ticket/kpi-model-time-resolution-ticket.component.html
@@ -4,9 +4,9 @@
         <app-config-time-resolution-tickets>
       </app-config-time-resolution-tickets>
   </div>
-
+<br>
 <div class="container text-center">
-    <h1> Temps de résolution des tickets</h1>
+    <h1 align="center"> Temps de résolution des tickets</h1>
 </div>
 <div>
     <div fxFlex="75" fxLayout="column" fxLayoutAlign="start stretch" fxFlex="75" >
